--- a/styles/default-styles.css
+++ b/styles/default-styles.css
@@ -66,6 +66,7 @@ canvas {
 	background-color: rgba(0, 0, 0, 0.75);
 	margin: 0;
 	padding: 0;
+	opacity: 1;
 
 	display: flex;
 	flex-direction: row;
@@ -81,15 +82,15 @@ canvas {
 	opacity: 0;
 }
 
-#playbackControls button{
+#playbackControls button, section#menu #closeMenuButton{
 	color: white;
 	background-color: rgba(0, 0, 0, 0);
 	border: none;
 	outline: none;
 	cursor: pointer;
-	font-size: 4rem;
+	font-size: 3rem;
 	height: 100%;
-	width: 4rem;
+	width: 5rem;
 	line-height: 100%;
 	margin: 0;
 	
@@ -122,10 +123,6 @@ canvas {
 	margin: 0;
 }
 
-#volumeIndicator{
-	transform: scale(-1, 1);
-	width: 6rem;
-}
 #volumeIndicator[data-muted="true"]{
 	color: dimgray;
 }
@@ -150,4 +147,28 @@ section{
 #fsButton{
   font-size: 1.2rem;
   width: 8rem;
+}
+
+section#menu{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.75);
+	opacity: 1;
+	visibility: visible;
+	color: white;
+	
+	transition: opacity 0.5s;
+}
+section#menu[data-hidden="true"]{
+	opacity: 0;
+	visibility: hidden;
+}
+
+section#menu #closeMenuButton{
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	margin-right: 1rem;
+	height: 5rem;
 }
