--- a/styles/default-styles.css
+++ b/styles/default-styles.css
@@ -82,7 +82,7 @@ canvas {
 	opacity: 0;
 }
 
-#controls button, section#menu #closeMenuButton{
+section#equalizer button, section#menu>button, section#controls button{
 	color: white;
 	background-color: rgba(0, 0, 0, 0);
 	border: none;
@@ -144,11 +144,7 @@ section#playback{
 }
 
 #volumeIndicator[data-muted="true"]{
-	color: dimgray;
-}
-
-#controls{
-  margin-left: 1rem;
+	color: #222;
 }
 
 #volumeLabel{
@@ -183,12 +179,46 @@ section#menu{
 	justify-content: center;
 	align-items: flex-start;
 	flex-wrap: wrap;
+
+	overflow-y: auto;
 	
 	transition: opacity 0.5s, visibility 0.5s;
 }
 section#menu[data-hidden="true"]{
 	opacity: 0;
 	visibility: hidden;
+}
+
+#equalizer{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.75);
+	opacity: 1;
+	visibility: visible;
+
+	transition: opacity 0.5s, visibility 0.5s;
+}
+#equalizer canvas{
+	background-color: transparent;
+	width: 100%;
+	height: 100%;
+}
+#equalizer[data-hidden="true"]{
+	opacity: 0;
+	visibility: hidden;
+}
+
+#equalizer #equalizerButtons{
+	position: fixed;
+	right: 0;
+	bottom: 0;
+	margin-right: 1rem;
+	height: 5rem;
+	display: flex;
+	flex-direction: row;
+	padding: 0;
+	margin: 0;
 }
 
 section#menu #closeMenuButton{
@@ -205,8 +235,20 @@ section#menu section{
 	justify-content: flex-start;
 	font-size: 1.5rem;
 	margin: 1rem;
-	width: calc(25% - 2rem);
+	/* min-width: calc(25% - 2rem); */
 	min-width: 10rem;
+}
+section#menu section button{
+	font-size: 1.5rem;
+	color: white;
+	background-color: #222;
+	border: none;
+	outline: none;
+	cursor: pointer;
+}
+
+section#menu ul{
+	font-size: 1rem;
 }
 
 input[type="checkbox"]{
